--- a/application/index/view/blueprint/not-files.html
+++ b/application/index/view/blueprint/not-files.html
@@ -1,15 +1,37 @@
 {include file="public/header" /}
-<!doctype html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>图纸上传</title>
+    <!-- 新 Bootstrap4 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
+
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- popper.min.js 用于弹窗、提示、下拉菜单 -->
+    <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
+
+    <!-- 最新的 Bootstrap4 核心 JavaScript 文件 -->
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<input type="file" value="请选择">
+<div class="jumbotron bg-light jumbotron-fluid">
+    <div class="container bg-light">
+        <h1>没有{$key}文件</h1>
+        <p>您可以在此界面上传您的{$key}文件</p>
+    </div>
+</div>
+​
+<div class="container bg-white">
+    <form action="javascript:" onsubmit="return false">
+        <p>选择{$key}文件:</p>
+        <div class="custom-file mb-3">
+            <input type="file" class="custom-file-input" id="customFile" name="filename">
+            <label class="custom-file-label" for="customFile">选择文件</label>
+        </div>
+        <div class="mt-3">
+            <button type="submit" class="btn btn-primary">提交</button>
+        </div>
+    </form>
+</div>
 </body>
 
 </html>
