--- a/application/index/view/delivery/delivery-details.html
+++ b/application/index/view/delivery/delivery-details.html
@@ -1,121 +1,84 @@
 ﻿{include file="public/header" /}
 <body>
-
 <div class="x-body">
-  <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
-    <legend>送货单明细</legend>
-    <div class="layui-row">
-      <div class="container-wrap">
-        <div class="box-1">
-          <table class="layui-table">
-            <thead>
-            <tr>
-              <th>明细编号</th>
-              <th>发货数量</th>
-              <!--<th>备注</th>-->
-            </tr>
-            </thead>
-
-            <tbody>
-            {volist name="delivery" id="deliveryList"}
-            <tr>
-              <td>{$deliveryList.deliveryInfoId}</td>
-              <?php $deliveryId = $deliveryList['deliveryInfoId'] ?>
-              <td id="countOrder">{$deliveryList.quantity|default='0'}</td>
-              <!--<td>{$deliveryList.remarks}</td>-->
-            </tr>
-            {/volist}
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </fieldset>
   <xblock>
     <button class="layui-btn" onclick="x_admin_show('选择明细','{:url(\'index/Delivery/selectOrder\',[\'deliveryId\'=>$deliveryId])}')"><i class="layui-icon"></i>添加订单</button>
     <a class="layui-btn" href="javascript:location.replace(location.href);">刷新</a>
-
-    <!--<span class="x-right" style="line-height:40px">共{count}条 · 共{count/25|getInt}页</span>-->
   </xblock>
+  <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
+    <legend>送货单明细</legend>
   <div class="layui-row">
-    {if $orderDatailInfoCount}
     <div class="container-wrap">
       <div class="box-1">
         <table class="layui-table">
           <thead>
           <tr>
             <th width="40px;">操作</th>
+            <th>明细编号</th>
             <th>所属订单</th>
-            <th>图纸明细</th>
-            <th>产品名称</th>
-            <th>订单数量</th>
+            <th width="70">送货数量</th>
           </tr>
           </thead>
+          {if $deliverOrderCount}
           <tbody>
             <?php $i = 1;?>
             {volist name="orderDatailInfo" id="info"}
             <tr>
               <td>
-                <a title="删除" href="javascript:void(0);" onclick="delete_(this,'{$info.id}','{$info.order_qty}')" style="color: red">删除</a>
+                <a title="删除" href="javascript:void(0);" onclick="delete_(this,'{$info.deliveryInfoId}')" style="color: red">删除</a>
               </td>
               <?php
                $isTask = getIsTask($info['id']);
                ?>
-              <td>{$info.order_id|getOrderId}</td>
+              <td>{$info.deliveryInfoId}</td>
+              <td>{$info.orderCode}</td>
               <td>
-                {$info.drawing_detail_id|getDrawingDetailId}
+                <div class="layui-inline">
+                  <div class="layui-input-inline">
+                    <input type="number" style="width: 50px;" id="{$info.deliveryInfoId}" autocomplete="off" class="layui-input" value="{$info.quantity}">
+                  </div>
+                  <a href="#" onclick="updateNum('{$info.deliveryInfoId}')" style="color:green;">修改</a>
+                </div>
               </td>
-              <td>{$info.drawing_detail_id|getDrawingName}</td>
-              <td>{$info.order_qty}</td>
             </tr>
             {/volist}
           </tbody>
+          {/if}
         </table>
       </div>
     </div>
-    {/if}
   </div>
+  </fieldset>
 </div>
 <script>
-    // $("#addOrder").click(function () {
-    //     top.SearchTeacherLayerId = top.layer.open({
-    //         title: "给送货单: {$deliverId} 添加订单产品",
-    //         type: 2,
-    //         shadeClose: true,
-    //         area: ['85%', '590px'],
-    //         content: "{:url('index/Delivery/selectOrder')}",
-    //         success: function () {
-    //             $(top.document.body).find('#layui-layer-iframe' + top.SearchTeacherLayerId).contents().find("td a").on('click', function () {
-    //                 //alert($(this).attr('data-id'));
-    //                 var order_id = $(this).attr('data-id');//订单编号
-    //                 var url = "{:url('index/Delivery/addNexus')}";
-    //                 var data = {'deliverId':'{$deliverId}','orderId':order_id};
-    //                 $.post(url,data,function(info){
-    //                 },'json');
-    //                 window.location.reload();  //刷新父级页面
-    //                 top.layer.close(top.SearchTeacherLayerId);
-    //             });
-    //         }
-    //     });
-    // });
-
     /*删除*/
-    function delete_(obj,id,qty){
+    function delete_(obj,id){
         layer.confirm('从发货单列表中删除？',function(index){
             var url = "{:url('/index/Delivery/delOrder')}";
-            var countOrder = $("#countOrder").text();
-            var nuber = countOrder-qty;
-            $("#countOrder").text(nuber);
-            var postData ={"id":id,"qty":nuber};
+            var postData ={"id":id};
             $.post(url,postData,function (result) {
                 if(result){
                     $(obj).parents("tr").remove();
-                    //window.location.reload();  //刷新父级页面
-                    //location.replace(location.href);
                     layer.msg('已删除!',{icon:1,time:1000});
                     $("#sx").click();
                 }else {
                     layer.alert("删除失败", {icon: 5});
+                }
+            },"json");
+        });
+    }
+
+    function updateNum(id){
+        var number = $("#"+id+"").val();
+        layer.confirm("明细: <span style='color: green'>"+id+"</span> <br>发货数量改为: <span style='color: green'>"+number+"</span> <br> 确认吗？",function(index){
+            var url = "{:url('/index/Delivery/updateNum')}";
+            var postData ={"deliveryInfoId":id,'quantity':number};
+            $.post(url,postData,function (result) {
+                if(result){
+                    layer.msg('修改成功!',{icon:1,time:1000});
+                    window.location.reload();  //刷新父级页面
+                }else {
+                    layer.alert("修改失败", {icon: 5});
                 }
             },"json");
         });
