--- a/application/index/view/delivery/view_order.html
+++ b/application/index/view/delivery/view_order.html
@@ -77,13 +77,17 @@
                     var url = "{:url('index/Delivery/addNexus')}";
                     var data = {'deliverId':'{$deliveryId}','orderId':order_id};
                     $.post(url,data,function(info){
+                        if (info){
+                            layer.msg("写入成功",{icon:1,time:2000});
+                            window.parent.location.reload();  //刷新父级页面
+                        } else{
+                            layer.msg("写入失败",{icon:1,time:2000});
+                        }
                     },'json');
                     top.layer.close(top.SearchTeacherLayerId);
-                    location.replace(location.href);
-                    window.location.reload();  //刷新父级页面
-                    //layer.msg('请稍后...', {icon:3,time:5000});
-                    layer.msg('写入成功!',{icon:1,time:1000});
-
+                    //location.replace(location.href);
+                    //window.location.reload();  //刷新父级页面
+                    //window.parent.location.reload();  //刷新父级页面
                 });
             }
         });
